--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.0
 MarkupSafe==2.1.1
-mysql-connector-python==8.0.29
-mysqlclient==2.1.0
 protobuf==4.21.1
 SQLAlchemy==1.4.37
 visitor==0.1.3
 Werkzeug==2.1.2
+psycopg2-binary~=2.9.6
